# AutoEdit

./: .dockerignore  .env.example  .gitignore  AI_HANDOFF.md  Dockerfile  README.md  docker-compose.gpu-ai.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_export.edl  test_export.fcpxml  test_export_multitrack.fcpxml
docs/: DEPLOYMENT.md
docs/ai/: real-media-phase0-baseline.json  (+1 more)
jobs/: BACKLOG.md
scripts/: ai_gpu_acceptance.py  ai_gpu_acceptance_evidence.schema.json  autoedit-deploy.sh  mysql-tunnel.sh  seed_operator_user.py  test-mysql-unraid.sh  test-mysql.sh  validate-golden-fixture.py
tests/: player_logic.test.mjs  speaker_mapping_logic.test.mjs  test_activity.py  test_ai_artifacts.py  test_ai_cut_atomicity.py  test_ai_gpu1_design_compliance.py  test_ai_gpu1_residual_findings.py  test_ai_gpu_acceptance.py  test_ai_gpu_acceptance_exhaustive.py  test_ai_gpu_harness.py  test_analysis_audio.py  test_angle_luts.py  test_angle_switching.py  test_audio_sync.py  test_auth_gate.py  test_conciseness.py  test_cut_engine.py  test_cut_selection_api.py  test_delete_project.py  test_diarize.py  test_edl.py  test_export.py  test_export_contiguity.py  test_golden_fixture_contracts.py  test_golden_fixture_synthetic.py  test_ingest_ui_static.py  test_intervals.py  test_level_normalization.py  test_llm_client.py  test_loudness.py  test_luts.py  test_media_streaming.py  test_migrations.py  test_mysql_integration.py  test_nl_intent.py  test_noise_floor.py  test_notes.py  test_player_logic_js.py  test_player_state.py  test_player_static.py  (+23 more)
(+108 files in other folders)
