[project]
name = "autoedit"
version = "0.1.0"
description = "Self-hosted multicam auto-edit platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "numpy>=2.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "pymysql>=1.1.1",
  "python-multipart>=0.0.30",
  "scipy>=1.15",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
line-length = 100
